--- a/assets/stylesheets/basic.css
+++ b/assets/stylesheets/basic.css
@@ -8,6 +8,10 @@ header {
     width: 100%;
 }
 
+header h1, footer p{
+    margin: 0.3em auto;
+}
+
 body {
     font-family: Arial, sans-serif;
     margin: 0;
@@ -21,11 +25,8 @@ body {
     flex-wrap: wrap;
     justify-content: space-around;
     align-items: center;
-    /* Center items vertically */
     padding: 20px;
-    margin-top: 80px;
-    margin-bottom: 60px;
-    /* Add margin equal to the height of the footer */
+    margin: 60px auto;
 }
 
 .box {
@@ -91,4 +92,8 @@ a:link {
 
 a:link {
     color: darkred;
+}
+
+.nowrap {
+    white-space: nowrap;
 }
