--- a/assets/stylesheets/basic.css
+++ b/assets/stylesheets/basic.css
@@ -13,7 +13,7 @@ header h1, footer p{
 }
 
 body {
-    font-family: Arial, sans-serif;
+    font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
     margin: 0;
     padding: 0;
     box-sizing: border-box;
